--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
+
 }
 
 .profile-image {
@@ -45,4 +48,26 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 16px;
+  gap: 16px;
+  justify-content: center;
 }
+
+.right{
+  display: flex;
+  justify-content: center;
+  margin: 16px;
+  gap: 16px;
+  }
+
+.left{
+  display: flex;
+  justify-content: center;
+  margin: 16px;
+  gap: 16px;
+
+}
+/* .notifications{
+
+} */
