--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,41 +2,40 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para{
   color: hsl(0, 0%, 0%);
+  font-size: 22px;
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
 
-.confirm {
+#confirm-button {
   background: green;
   color: white;
+  font-size: 20px;
   font-weight: bold;
 } 
 
-.button {
+#cancel-button{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+div.text {
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: 50;
+}
+
+div .text{
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
-
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
-}
+  
