--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  border: 8px solid white;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: auto;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px ;
+  margin: auto;
 }
 
 .button-container {
   background: #e3f4ff;
+  border: 8px solid white;
+  text-align: center;
+  padding: 8px;
+  margin: 0;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 24px 8px; 
 }
